--- a/src/viewBook.html
+++ b/src/viewBook.html
@@ -21,9 +21,9 @@
     ></script>
   </head>
 
-  <body>
+  <body class="h-screen flex flex-col justify-between">
     <nav
-      class="h-14 flex container items-center bg-white-color m-auto text-important-black-color"
+      class="h-14 flex items-center bg-white-color px-20 w-full text-important-black-color"
     >
       <ul class="flex justify-between items-center w-full">
         <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
@@ -65,7 +65,7 @@
       </ul>
     </nav>
 
-    <section class="flex full-page items-center container m-auto w-3/4">
+    <section class="flex items-center container m-auto w-3/4">
       <div class="flex">
         <div class="w-2/5 h-96">
           <img src="./images/medea.jpg" alt="" class="h-full w-2/3" />
@@ -73,10 +73,15 @@
         <div class="w-3/5">
           <div class="flex gap-y-8 flex-col h-full">
             <div class="flex flex-col gap-y-4">
-              <div
-                class="text-important-black-color font-bold font-lora text-3xl"
-              >
-                Hero With Gold
+              <div class="flex justify-between">
+                <div
+                  class="text-important-black-color font-bold font-lora text-3xl"
+                >
+                  Hero With Gold
+                </div>
+                <div class="font-lora font-bold text-3xl text-beige-color">
+                  $90
+                </div>
               </div>
               <div class="flex gap-x-2">
                 <span>by</span>
