--- a/src/Login/login.html
+++ b/src/Login/login.html
@@ -21,16 +21,16 @@
     ></script>
   </head>
 
-  <body>
+  <body class="h-screen flex flex-col justify-between">
     <nav
-      class="h-14 flex container items-center bg-white-color m-auto text-important-black-color"
+      class="navbar text-important-black-color lg:container lg:mx-auto lg:right-1/2 lg:translate-x-1/2"
     >
       <ul class="flex justify-between items-center w-full">
-        <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
+        <ul class="text-xl font-bold font-lora flex gap-x-2 items-center">
           <img src="../images/logo.png" alt="" class="" />
           <li>ITP Library</li>
         </ul>
-        <ul class="flex gap-x-10 uppercase font-medium font-roboto">
+        <ul class="gap-x-10 uppercase font-bold font-roboto hidden sm:flex">
           <li>
             <a href="../index.html" class="flex items-center gap-2 text-[12px]">
               <i class="fa-solid fa-house"></i>
@@ -48,7 +48,7 @@
           </li>
           <li>
             <a
-              href="../Orders/orderList.html"
+              href="orderList.html"
               class="flex items-center gap-2 text-[12px]"
             >
               <i class="fa-solid fa-truck-fast"></i>
@@ -56,25 +56,39 @@
             </a>
           </li>
           <li>
-            <a href="login.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="../Login/login.html"
+              class="flex items-center gap-2 text-[12px]"
+            >
               <i class="fa-solid fa-user"></i>
               <span>Login</span>
             </a>
           </li>
         </ul>
       </ul>
+      <div
+        class="sm:hidden w-1/3 bg-white-color shadow-lg z-50 fixed right-0 flex flex-col gap-y-4 top-0 py-4 pl-4 rounded-bl-md text-important-black-color font-lora font-bold"
+      >
+        <a href="../index.html">Home</a>
+        <a href="../shoppingCart.html">Shopping Cart</a>
+        <a href="./orderList.html">Orders</a>
+        <a href="./Login/login.html">Login</a>
+      </div>
     </nav>
+    <div class=""></div>
 
-    <section class="full-page container mx-auto p-16">
-      <div class="w-full h-full flex p-8">
-        <div class="h-full w-1/2">
+    <section class="container mx-auto">
+      <div class="h-full flex flex-wrap justify-center lg:gap-x-20">
+        <div class="mb-4 md:mb-0">
           <img
             src="../images/auth.png"
             alt=""
-            class="h-full w-[70%] object-cover mx-auto"
+            class="h-full w-[70%] md:w-[90%] object-cover mx-auto"
           />
         </div>
-        <form class="h-full w-1/2 flex flex-col items-start justify-between">
+        <form
+          class="flex flex-col items-start md:justify-between w-2/3 md:w-1/2 pt-4 gap-y-4 lg:w-2/5 xl:w-1/2"
+        >
           <div class="flex flex-col gap-y-2">
             <div
               class="text-important-black-color font-lora font-semibold text-3xl"
@@ -86,22 +100,22 @@
             </div>
           </div>
           <div class="flex flex-col gap-y-6 w-full">
-            <div class="flex flex-col gap-y-2 text-sm w-2/3">
+            <div class="flex flex-col gap-y-2 text-sm md:w-2/3">
               <div>Email</div>
               <input
                 type="email"
                 placeholder="Email"
                 required
-                class="w-full pl-2 border-2 border-gray-200 rounded-sm outline-none py-1"
+                class="w-full pl-2 border-[1px] border-gray-200 rounded-[4px] outline-none py-1"
               />
             </div>
-            <div class="flex flex-col gap-y-2 text-sm w-2/3">
+            <div class="flex flex-col gap-y-2 text-sm md:w-2/3">
               <div>Password</div>
               <input
                 type="password"
                 placeholder="Password"
                 required
-                class="w-full pl-2 border-2 border-gray-200 rounded-sm outline-none py-1"
+                class="w-full pl-2 border-[1px] border-gray-200 rounded-[4px] outline-none py-1"
               />
             </div>
             <div class="flex gap-x-2">
@@ -114,7 +128,9 @@
           >
             Log In
           </button>
-          <div class="flex flex-col gap-y-2 text-sm underline cursor-pointer">
+          <div
+            class="flex flex-col gap-y-2 text-sm underline cursor-pointer font-bold text-important-black-color font-lora"
+          >
             <a>Forgot your password?</a>
             <a href="register.html">Register as a new user</a>
           </div>
@@ -122,7 +138,7 @@
       </div>
     </section>
 
-    <footer class="h-14 mt-10 bg-footer-color text-xs">
+    <footer class="h-14 bg-footer-color text-xs px-4">
       <div class="container m-auto flex items-center justify-between h-full">
         <div class="flex gap-x-2 items-center">
           <div>@Copyright</div>
