--- a/src/Orders/orderList.html
+++ b/src/Orders/orderList.html
@@ -21,16 +21,14 @@
     ></script>
   </head>
 
-  <body>
-    <nav
-      class="h-14 flex container items-center bg-white-color m-auto text-important-black-color"
-    >
+  <body class="h-screen flex flex-col justify-between">
+    <nav class="bg-white-color navbar text-important-black-color">
       <ul class="flex justify-between items-center w-full">
         <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
           <img src="../images/logo.png" alt="" class="" />
           <li>ITP Library</li>
         </ul>
-        <ul class="flex gap-x-10 uppercase font-medium font-roboto">
+        <ul class="gap-x-10 uppercase font-medium font-roboto hidden sm:flex">
           <li>
             <a href="../index.html" class="flex items-center gap-2 text-[12px]">
               <i class="fa-solid fa-house"></i>
@@ -66,20 +64,35 @@
           </li>
         </ul>
       </ul>
+      <div
+        class="sm:hidden w-1/3 bg-white-color shadow-lg z-50 fixed right-0 flex flex-col gap-y-4 top-0 py-4 pl-4 rounded-bl-md text-important-black-color font-lora font-bold"
+      >
+        <a href="../index.html">Home</a>
+        <a href="../shoppingCart.html">Shopping Cart</a>
+        <a href="./orderList.html">Orders</a>
+        <a href="./Login/login.html">Login</a>
+      </div>
     </nav>
+    <div class=""></div>
 
-    <section class="full-page my-5 container mx-auto p-20">
-      <div class="flex flex-col h-full gap-y-8">
+    <section class="container mx-auto h-4/5">
+      <div class="flex flex-col h-full gap-y-8 md:p-4">
         <div
-          class="text-3xl font-lora font-semibold from-important-black-color"
+          class="text-3xl font-lora font-semibold from-important-black-color m-auto md:m-0"
         >
           Your Products
         </div>
-        <div class="w-full flex flex-wrap gap-y-6">
-          <div class="w-full flex justify-between border-b-2 pb-6">
-            <div class="flex gap-x-8">
+        <div
+          class="w-full flex flex-wrap gap-y-6 max-h-fit overflow-y-scroll px-4"
+        >
+          <div
+            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
               <div
-                class="w-20 h-24 bg-carrousel-color roounded-md flex justify-center items-center"
+                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
               >
                 <i class="fa-solid fa-book text-3xl"></i>
               </div>
@@ -111,7 +124,7 @@
                 </div>
               </div>
             </div>
-            <div class="flex flex-col items-end">
+            <div class="flex flex-col items-center md:items-end">
               <div class="text-beige-color font-roboto font-bold text-xl">
                 $90
               </div>
@@ -124,10 +137,14 @@
               </a>
             </div>
           </div>
-          <div class="w-full flex justify-between border-b-2 pb-6">
-            <div class="flex gap-x-8">
+          <div
+            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
               <div
-                class="w-20 h-24 bg-carrousel-color roounded-md flex justify-center items-center"
+                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
               >
                 <i class="fa-solid fa-book text-3xl"></i>
               </div>
@@ -136,7 +153,7 @@
                   <div
                     class="font-lora font-semibold text-2xl text-important-black-color"
                   >
-                    Order #78233
+                    Order #78234
                   </div>
                   <div class="flex gap-x-2 items-center">
                     <span class="text-normal-black-color font-roboto text-lg"
@@ -154,17 +171,329 @@
                   >
                   <span
                     class="font-lora font-semibold text-important-black-color"
-                    >Completed</span
+                    >In Progress</span
                   >
                 </div>
               </div>
             </div>
-            <div class="flex flex-col items-end">
+            <div class="flex flex-col items-center md:items-end">
               <div class="text-beige-color font-roboto font-bold text-xl">
                 $90
               </div>
               <a
-                href="orderDetails.html"
+                href="./orderDetails.html"
+                class="flex gap-x-2 items-center text-sm"
+              >
+                <i class="fa-solid fa-pencil"></i>
+                <span>Edit Order Details</span>
+              </a>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div
+                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+              >
+                <i class="fa-solid fa-book text-3xl"></i>
+              </div>
+              <div class="flex flex-col gap-y-4">
+                <div class="">
+                  <div
+                    class="font-lora font-semibold text-2xl text-important-black-color"
+                  >
+                    Order #78234
+                  </div>
+                  <div class="flex gap-x-2 items-center">
+                    <span class="text-normal-black-color font-roboto text-lg"
+                      >Items:</span
+                    >
+                    <span
+                      class="text-important-black-color font-bold font-lora text-lg"
+                      >2</span
+                    >
+                  </div>
+                </div>
+                <div class="flex gap-x-2 items-center text-sm">
+                  <span class="font-roboto font-normal text-normal-black-color"
+                    >Deivery Status:</span
+                  >
+                  <span
+                    class="font-lora font-semibold text-important-black-color"
+                    >In Progress</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center md:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <a
+                href="./orderDetails.html"
+                class="flex gap-x-2 items-center text-sm"
+              >
+                <i class="fa-solid fa-pencil"></i>
+                <span>Edit Order Details</span>
+              </a>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div
+                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+              >
+                <i class="fa-solid fa-book text-3xl"></i>
+              </div>
+              <div class="flex flex-col gap-y-4">
+                <div class="">
+                  <div
+                    class="font-lora font-semibold text-2xl text-important-black-color"
+                  >
+                    Order #78234
+                  </div>
+                  <div class="flex gap-x-2 items-center">
+                    <span class="text-normal-black-color font-roboto text-lg"
+                      >Items:</span
+                    >
+                    <span
+                      class="text-important-black-color font-bold font-lora text-lg"
+                      >2</span
+                    >
+                  </div>
+                </div>
+                <div class="flex gap-x-2 items-center text-sm">
+                  <span class="font-roboto font-normal text-normal-black-color"
+                    >Deivery Status:</span
+                  >
+                  <span
+                    class="font-lora font-semibold text-important-black-color"
+                    >In Progress</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center md:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <a
+                href="./orderDetails.html"
+                class="flex gap-x-2 items-center text-sm"
+              >
+                <i class="fa-solid fa-pencil"></i>
+                <span>Edit Order Details</span>
+              </a>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div
+                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+              >
+                <i class="fa-solid fa-book text-3xl"></i>
+              </div>
+              <div class="flex flex-col gap-y-4">
+                <div class="">
+                  <div
+                    class="font-lora font-semibold text-2xl text-important-black-color"
+                  >
+                    Order #78234
+                  </div>
+                  <div class="flex gap-x-2 items-center">
+                    <span class="text-normal-black-color font-roboto text-lg"
+                      >Items:</span
+                    >
+                    <span
+                      class="text-important-black-color font-bold font-lora text-lg"
+                      >2</span
+                    >
+                  </div>
+                </div>
+                <div class="flex gap-x-2 items-center text-sm">
+                  <span class="font-roboto font-normal text-normal-black-color"
+                    >Deivery Status:</span
+                  >
+                  <span
+                    class="font-lora font-semibold text-important-black-color"
+                    >In Progress</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center md:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <a
+                href="./orderDetails.html"
+                class="flex gap-x-2 items-center text-sm"
+              >
+                <i class="fa-solid fa-pencil"></i>
+                <span>Edit Order Details</span>
+              </a>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div
+                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+              >
+                <i class="fa-solid fa-book text-3xl"></i>
+              </div>
+              <div class="flex flex-col gap-y-4">
+                <div class="">
+                  <div
+                    class="font-lora font-semibold text-2xl text-important-black-color"
+                  >
+                    Order #78234
+                  </div>
+                  <div class="flex gap-x-2 items-center">
+                    <span class="text-normal-black-color font-roboto text-lg"
+                      >Items:</span
+                    >
+                    <span
+                      class="text-important-black-color font-bold font-lora text-lg"
+                      >2</span
+                    >
+                  </div>
+                </div>
+                <div class="flex gap-x-2 items-center text-sm">
+                  <span class="font-roboto font-normal text-normal-black-color"
+                    >Deivery Status:</span
+                  >
+                  <span
+                    class="font-lora font-semibold text-important-black-color"
+                    >In Progress</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center md:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <a
+                href="./orderDetails.html"
+                class="flex gap-x-2 items-center text-sm"
+              >
+                <i class="fa-solid fa-pencil"></i>
+                <span>Edit Order Details</span>
+              </a>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div
+                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+              >
+                <i class="fa-solid fa-book text-3xl"></i>
+              </div>
+              <div class="flex flex-col gap-y-4">
+                <div class="">
+                  <div
+                    class="font-lora font-semibold text-2xl text-important-black-color"
+                  >
+                    Order #78234
+                  </div>
+                  <div class="flex gap-x-2 items-center">
+                    <span class="text-normal-black-color font-roboto text-lg"
+                      >Items:</span
+                    >
+                    <span
+                      class="text-important-black-color font-bold font-lora text-lg"
+                      >2</span
+                    >
+                  </div>
+                </div>
+                <div class="flex gap-x-2 items-center text-sm">
+                  <span class="font-roboto font-normal text-normal-black-color"
+                    >Deivery Status:</span
+                  >
+                  <span
+                    class="font-lora font-semibold text-important-black-color"
+                    >In Progress</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center md:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <a
+                href="./orderDetails.html"
+                class="flex gap-x-2 items-center text-sm"
+              >
+                <i class="fa-solid fa-pencil"></i>
+                <span>Edit Order Details</span>
+              </a>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center md:justify-between border-b-2 pb-6 flex-wrap md:flex-nowrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div
+                class="md:w-24 md:h-24 h-32 w-36 bg-carrousel-color roounded-md flex justify-center items-center"
+              >
+                <i class="fa-solid fa-book text-3xl"></i>
+              </div>
+              <div class="flex flex-col gap-y-4">
+                <div class="">
+                  <div
+                    class="font-lora font-semibold text-2xl text-important-black-color"
+                  >
+                    Order #78234
+                  </div>
+                  <div class="flex gap-x-2 items-center">
+                    <span class="text-normal-black-color font-roboto text-lg"
+                      >Items:</span
+                    >
+                    <span
+                      class="text-important-black-color font-bold font-lora text-lg"
+                      >2</span
+                    >
+                  </div>
+                </div>
+                <div class="flex gap-x-2 items-center text-sm">
+                  <span class="font-roboto font-normal text-normal-black-color"
+                    >Deivery Status:</span
+                  >
+                  <span
+                    class="font-lora font-semibold text-important-black-color"
+                    >In Progress</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center md:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <a
+                href="./orderDetails.html"
                 class="flex gap-x-2 items-center text-sm"
               >
                 <i class="fa-solid fa-pencil"></i>
@@ -176,7 +505,7 @@
       </div>
     </section>
 
-    <footer class="h-14 bg-footer-color text-xs">
+    <footer class="h-14 bg-footer-color text-xs px-4 md:px-0">
       <div class="container m-auto flex items-center justify-between h-full">
         <div class="flex gap-x-2 items-center">
           <div>@Copyright</div>
