--- a/src/shoppingCart.html
+++ b/src/shoppingCart.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ITP Library</title>
     <link href="./output.css" rel="stylesheet" />
+    <link href="./input.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,16 +22,14 @@
     ></script>
   </head>
 
-  <body>
-    <nav
-      class="h-14 flex container items-center bg-white-color m-auto text-important-black-color"
-    >
+  <body class="h-screen flex flex-col justify-between">
+    <nav class="bg-white-color navbar text-important-black-color">
       <ul class="flex justify-between items-center w-full">
         <ul class="text-xl font-medium font-lora flex gap-x-2 items-center">
           <img src="images/logo.png" alt="" class="" />
           <li>ITP Library</li>
         </ul>
-        <ul class="flex gap-x-10 uppercase font-medium font-roboto">
+        <ul class="gap-x-10 uppercase font-medium font-roboto hidden sm:flex">
           <li>
             <a href="index.html" class="flex items-center gap-2 text-[12px]">
               <i class="fa-solid fa-house"></i>
@@ -56,31 +55,52 @@
             </a>
           </li>
           <li>
-            <a href="login.html" class="flex items-center gap-2 text-[12px]">
+            <a
+              href="./Login/login.html"
+              class="flex items-center gap-2 text-[12px]"
+            >
               <i class="fa-solid fa-user"></i>
               <span>Login</span>
             </a>
           </li>
         </ul>
       </ul>
-    </nav>
 
-    <section class="full-page my-5 container mx-auto p-20">
-      <div class="flex flex-col h-full justify-between">
-        <div class="text-2xl font-lora font-bold from-important-black-color">
+      <div
+        class="sm:hidden w-1/3 bg-white-color shadow-lg z-50 fixed right-0 flex flex-col gap-y-4 top-0 py-4 pl-4 rounded-bl-md text-important-black-color font-lora font-bold"
+      >
+        <a href="index.html">Home</a>
+        <a href="shoppingCart.html">Shopping Cart</a>
+        <a href="./Orders/orderList.html">Orders</a>
+        <a href="./Login/login.html">Login</a>
+      </div>
+    </nav>
+    <div class=""></div>
+
+    <section class="container mx-auto h-4/5 p-4">
+      <div class="flex flex-col h-full gap-y-8 justify-between">
+        <div
+          class="text-2xl font-lora font-bold from-important-black-color m-auto md:m-0"
+        >
           Your Products
         </div>
-        <div class="w-full flex flex-wrap gap-y-6">
-          <div class="w-full flex justify-between border-b-2 pb-6">
-            <div class="flex gap-x-8">
-              <div class="w-20 h-28">
+        <div
+          class="w-full flex flex-wrap gap-y-6 max-h-fit overflow-y-scroll px-4"
+        >
+          <div
+            class="w-full flex justify-center sm:justify-between border-b-2 pb-6 flex-wrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div class="md:w-24 md:h-24 h-32 w-36">
                 <img
                   src="./images/the-idiot.jpg"
                   alt="image-order"
-                  class="w-full h-full"
+                  class="w-full h-full object-cover rounded-md md:rounded-none"
                 />
               </div>
-              <div class="flex flex-col">
+              <div class="flex flex-col items-center">
                 <div
                   class="font-lora font-semibold text-2xl text-important-black-color"
                 >
@@ -94,7 +114,7 @@
                 </div>
               </div>
             </div>
-            <div class="flex flex-col items-end">
+            <div class="flex flex-col items-center sm:items-end">
               <div class="text-beige-color font-roboto font-bold text-xl">
                 $90
               </div>
@@ -104,16 +124,20 @@
               </div>
             </div>
           </div>
-          <div class="w-full flex justify-between border-b-2 pb-6">
-            <div class="flex gap-x-8">
-              <div class="w-20 h-28">
+          <div
+            class="w-full flex justify-center sm:justify-between border-b-2 pb-6 flex-wrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div class="md:w-24 md:h-24 h-32 w-36">
                 <img
-                  src="./images/medea.jpg"
+                  src="./images/the-idiot.jpg"
                   alt="image-order"
-                  class="w-full h-full"
+                  class="w-full h-full object-cover rounded-md md:rounded-none"
                 />
               </div>
-              <div class="flex flex-col">
+              <div class="flex flex-col items-center">
                 <div
                   class="font-lora font-semibold text-2xl text-important-black-color"
                 >
@@ -127,7 +151,192 @@
                 </div>
               </div>
             </div>
-            <div class="flex flex-col items-end">
+            <div class="flex flex-col items-center sm:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <div class="flex gap-x-2 items-center text-sm">
+                <i class="fa-regular fa-trash-can"></i>
+                <span>Remove</span>
+              </div>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center sm:justify-between border-b-2 pb-6 flex-wrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div class="md:w-24 md:h-24 h-32 w-36">
+                <img
+                  src="./images/the-idiot.jpg"
+                  alt="image-order"
+                  class="w-full h-full object-cover rounded-md md:rounded-none"
+                />
+              </div>
+              <div class="flex flex-col items-center">
+                <div
+                  class="font-lora font-semibold text-2xl text-important-black-color"
+                >
+                  Hero with Gold
+                </div>
+                <div class="flex gap-x-2 items-center text-lg">
+                  <span class="text-normal-black-color font-roboto">by</span>
+                  <span class="text-important-black-color font-bold font-lora"
+                    >Dougie Rogers</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center sm:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <div class="flex gap-x-2 items-center text-sm">
+                <i class="fa-regular fa-trash-can"></i>
+                <span>Remove</span>
+              </div>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center sm:justify-between border-b-2 pb-6 flex-wrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div class="md:w-24 md:h-24 h-32 w-36">
+                <img
+                  src="./images/the-idiot.jpg"
+                  alt="image-order"
+                  class="w-full h-full object-cover rounded-md md:rounded-none"
+                />
+              </div>
+              <div class="flex flex-col items-center">
+                <div
+                  class="font-lora font-semibold text-2xl text-important-black-color"
+                >
+                  Hero with Gold
+                </div>
+                <div class="flex gap-x-2 items-center text-lg">
+                  <span class="text-normal-black-color font-roboto">by</span>
+                  <span class="text-important-black-color font-bold font-lora"
+                    >Dougie Rogers</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center sm:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <div class="flex gap-x-2 items-center text-sm">
+                <i class="fa-regular fa-trash-can"></i>
+                <span>Remove</span>
+              </div>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center sm:justify-between border-b-2 pb-6 flex-wrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div class="md:w-24 md:h-24 h-32 w-36">
+                <img
+                  src="./images/the-idiot.jpg"
+                  alt="image-order"
+                  class="w-full h-full object-cover rounded-md md:rounded-none"
+                />
+              </div>
+              <div class="flex flex-col items-center">
+                <div
+                  class="font-lora font-semibold text-2xl text-important-black-color"
+                >
+                  Hero with Gold
+                </div>
+                <div class="flex gap-x-2 items-center text-lg">
+                  <span class="text-normal-black-color font-roboto">by</span>
+                  <span class="text-important-black-color font-bold font-lora"
+                    >Dougie Rogers</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center sm:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <div class="flex gap-x-2 items-center text-sm">
+                <i class="fa-regular fa-trash-can"></i>
+                <span>Remove</span>
+              </div>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center sm:justify-between border-b-2 pb-6 flex-wrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div class="md:w-24 md:h-24 h-32 w-36">
+                <img
+                  src="./images/the-idiot.jpg"
+                  alt="image-order"
+                  class="w-full h-full object-cover rounded-md md:rounded-none"
+                />
+              </div>
+              <div class="flex flex-col items-center">
+                <div
+                  class="font-lora font-semibold text-2xl text-important-black-color"
+                >
+                  Hero with Gold
+                </div>
+                <div class="flex gap-x-2 items-center text-lg">
+                  <span class="text-normal-black-color font-roboto">by</span>
+                  <span class="text-important-black-color font-bold font-lora"
+                    >Dougie Rogers</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center sm:items-end">
+              <div class="text-beige-color font-roboto font-bold text-xl">
+                $90
+              </div>
+              <div class="flex gap-x-2 items-center text-sm">
+                <i class="fa-regular fa-trash-can"></i>
+                <span>Remove</span>
+              </div>
+            </div>
+          </div>
+          <div
+            class="w-full flex justify-center sm:justify-between border-b-2 pb-6 flex-wrap gap-y-2 md:gap-y-0"
+          >
+            <div
+              class="flex gap-x-8 flex-wrap justify-center md:flex-nowrap gap-y-4 md:gap-y-0"
+            >
+              <div class="md:w-24 md:h-24 h-32 w-36">
+                <img
+                  src="./images/the-idiot.jpg"
+                  alt="image-order"
+                  class="w-full h-full object-cover rounded-md md:rounded-none"
+                />
+              </div>
+              <div class="flex flex-col items-center">
+                <div
+                  class="font-lora font-semibold text-2xl text-important-black-color"
+                >
+                  Hero with Gold
+                </div>
+                <div class="flex gap-x-2 items-center text-lg">
+                  <span class="text-normal-black-color font-roboto">by</span>
+                  <span class="text-important-black-color font-bold font-lora"
+                    >Dougie Rogers</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="flex flex-col items-center sm:items-end">
               <div class="text-beige-color font-roboto font-bold text-xl">
                 $90
               </div>
@@ -138,13 +347,23 @@
             </div>
           </div>
         </div>
-        <div class="flex justify-between">
-          <div class="flex flex-col gap-y-4">
+        <div
+          class="flex flex-col justify-between gap-y-6 md:gap-y-2 px-4 md:px-0"
+        >
+          <div class="flex justify-between">
             <div
               class="font-semibold font-lora text-xl text-important-black-color"
             >
               Total:
             </div>
+
+            <div class="text-beige-color font-roboto font-bold text-xl">
+              $90
+            </div>
+          </div>
+          <div
+            class="flex justify-center gap-y-2 md:gap-y-0 xs:justify-between flex-wrap"
+          >
             <a href="index.html">
               <button
                 class="border-2 py-1.5 px-10 text-center rounded-md text-xs"
@@ -152,11 +371,6 @@
                 Continue Shopping
               </button>
             </a>
-          </div>
-          <div class="flex flex-col items-end gap-y-4">
-            <div class="text-beige-color font-roboto font-bold text-xl">
-              $90
-            </div>
             <a href="./Orders/orderDetails.html">
               <button
                 class="text-center bg-black border-2 border-black rounded-md text-xs text-white px-10 py-1.5"
@@ -169,7 +383,7 @@
       </div>
     </section>
 
-    <footer class="h-14 bg-footer-color text-xs">
+    <footer class="h-14 bg-footer-color text-xs px-4">
       <div class="container m-auto flex items-center justify-between h-full">
         <div class="flex gap-x-2 items-center">
           <div>@Copyright</div>
